# flyfun-weather

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_briefing_usage.py  003_model_init_times.py
config/: routes.yaml
configs/weather_digest/: default.json  openai.json
configs/weather_digest/prompts/: briefer_v1.md
deploy/: 03-create-weatherbrief-db.sql  weather.flyfun.aero.caddy
designs/: INDEX.md  analysis-metrics.md  analysis.md  architecture.md  data-models.md  deferred-analysis-plan.md  digest.md  elevation-profile-plan.md  fetch.md  flight-weather-tracker-spec.md  multi-user-deployment.md  plan-briefing-architecture.md  sounding_analysis_plan.md  vertical-motion-plan.md  visualization-plan.md  visualization.md
docs/designs/: analytics-metrics.md
src/weatherbrief/: __main__.py  airports.py  cli.py  config.py  models.py  pipeline.py
src/weatherbrief/analysis/: clouds.py  comparison.py  icing.py  wind.py
src/weatherbrief/api/: admin.py  app.py  auth.py  auth_config.py  encryption.py  flights.py  jwt_utils.py  packs.py  preferences.py  routes.py  usage.py
src/weatherbrief/db/: __init__.py  deps.py  engine.py  models.py
src/weatherbrief/digest/: llm_config.py  llm_digest.py  prompt_builder.py  skewt.py  text.py
src/weatherbrief/fetch/: dwd_text.py  elevation.py  (+6 more)
tests/: conftest.py  test_airports.py  test_api.py  test_auth.py  test_clouds.py  test_comparison.py  test_db_models.py  test_dwd_text.py  test_email.py  test_encryption.py  test_flights_storage.py  test_gramet.py  test_icing.py  test_inversions.py  test_jwt.py  test_llm_config.py  test_llm_digest.py  test_models.py  test_open_meteo.py  test_pipeline.py  test_preferences.py  test_prompt_builder.py  test_report.py  test_route_points.py  test_skewt.py  test_usage.py  test_vertical_motion.py  test_wind.py
web/: admin.html  briefing.html  index.html  login.html  package-lock.json  package.json  settings.html  tsconfig.json
web/css/: style.css
web/ts/: admin-main.ts  briefing-main.ts  flights-main.ts  settings-main.ts  utils.ts
(+73 files in other folders)
