[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherbrief"
version = "0.1.0"
description = "Medium-range weather assessment for cross-country GA flights in Europe"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "euro-aip @ file:///Users/brice/Developer/public/rzflight/euro_aip",
    "metpy>=1.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "langchain>=1.2",
    "langgraph>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "python-dotenv>=1.0",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pymysql>=1.1",
    "cryptography>=42.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "authlib>=1.3",
    "pyjwt>=2.8",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "SRTM.py>=0.3.7",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0", "responses>=0.25"]

[project.scripts]
weatherbrief = "weatherbrief.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
